fix: makes attribition visible when layercard is active and alters style of info icon

--- a/src/components/composite/LayerCard.module.css
+++ b/src/components/composite/LayerCard.module.css
@@ -82,6 +82,10 @@
     margin-bottom: var(--spacing-large);
 }
 
+.layerCardInfoIcon {
+    color: var(--tertiary-color);
+}
+
 .layerCardContent:empty {
     margin-bottom: 0; 
 }
